fix tense error in text, remove float from a tag to fix text alignment in columns 1,2,3

--- a/css/styles.css
+++ b/css/styles.css
@@ -100,7 +100,6 @@ h1 {
 
 a {
   height: 40%;
-  float: right;
   font-family: courier;
   color: white;
 }
